# smart_import

./: .gitignore  README.md  license.txt  pyproject.toml
frontend/: components.d.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.mjs
frontend/src/: main.js
frontend/src/components/: PageHeader.vue
frontend/src/pages/: PastImports.vue  TemplateBuilder.vue  Wizard.vue
samples/: sample_crm_data.xlsx
smart_import/: api.py  hooks.py  modules.txt
smart_import/engine/: importer.py  mapper.py  reader.py  template.py  urls.py
smart_import/public/frontend/: index.html
smart_import/public/frontend/assets/: index-4J0FXqRh.css  index-90O3SD2u.js  index-B-2aXxWj.js  index-B57wWQJ_.js  index-BA9JiGp5.css  index-BCBT2tDR.css  index-BCEjcWrt.css  index-CcVvelBx.js  index-Ccp4M53E.js  index-CoGaaFMQ.js  index-Cr9bQN9R.js  index-CyvL2wtb.css  index-DEb2ErkK.css  index-DJTlV104.css  index-DOdaoei7.css  index-DYGE0fv-.js  index-D_aoChPP.js  index-DcTBiLWh.js  index-DyQr8EtK.css  index-ERZKCXJl.js  index-MgfOCq6-.js  index-jYl7b3qx.css  index-krNPlgg2.js
smart_import/smart_import/doctype/smart_import_session/: smart_import_session.json  smart_import_session.py
smart_import/tests/: test_engine.py
smart_import/www/: smart-import.html  smart-import.py
