[project]
name = "smart_import"
authors = [
    { name = "Smart Import" }
]
description = "Friendly, smart data import for Frappe apps"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
